Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script>
         document.documentElement.classList.add('js');
     </script>
+    <link rel="icon" type="image/svg+xml" href="media/images/logo.png">
     <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -180,7 +181,7 @@
         </li>
         <li>
           <a href="https://twitter.com/talentscode" target="_blank" rel="noopener" aria-label="X / Twitter">
-            <img src="media/images/icons/instagram.png" alt="" width="28" height="28" class="icon">
+            <img src="media/images/icons/x.png" alt="" width="28" height="28" class="icon">
           </a>
         </li>
       </ul>
