Refactor code structure for improved readability and maintainability

--- a/nosotros.html
+++ b/nosotros.html
@@ -2,13 +2,45 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Nosotros | Talents Code</title>
+    <meta charset="UTF-8" />
+    <title>Talents Code | La agencia que contrata talentos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description"
-        content="Conoce a Talents Code: enfoque consultivo, metodología de evaluación y acompañamiento integral en talento.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="https://www.talentscode.com/nosotros.html">
-    <link rel="stylesheet" href="media/css/styles.css">
+        content="Talents Code: Reclutamiento especializado, onboarding, nómina y expansión legal para escalar tu organización con talento validado." />
+    <link rel="canonical" href="https://www.talentscode.com/" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Talents Code | La agencia que contrata talentos">
+    <meta property="og:description"
+        content="Escala tu organización con talento validado, procesos ágiles y data accionable.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.talentscode.com/">
+    <meta property="og:image" content="https://www.talentscode.com/assets/og-image.jpg">
+    <meta property="og:locale" content="es_MX">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" fetchpriority="low">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="style"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"
+        media="print" onload="this.media='all'">
+    <link rel="preload" as="image" href="assets/hero-rh.jpg">
+    <link rel="stylesheet" href="media/css/styles.css" />
+    <script>
+        document.documentElement.classList.add('js');
+    </script>
+    <link rel="icon" type="image/svg+xml" href="media/images/logo.png">
+    <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Talents Code",
+    "url":"https://www.talentscode.com/",
+    "logo":"https://www.talentscode.com/assets/logo-light.svg",
+    "sameAs":["https://www.linkedin.com/company/talents-code/"],
+    "description":"Reclutamiento especializado, evaluación, onboarding y soluciones de expansión legal."
+  }
+  </script>
 </head>
 
 <body>
@@ -16,7 +48,7 @@
     <header class="site-header" id="top">
         <div class="container header__inner">
             <a href="/" class="brand" aria-label="Inicio Talents Code">
-                <img src="media/images/banner.png" alt="Talents Code" class="brand__logo" width="160" height="64"
+                <img src="media/images/logo.png" alt="Talents Code" class="brand__logo" width="160" height="64"
                     decoding="async">
             </a>
             <nav class="nav" aria-label="Navegación principal">
