--- a/nosotros.html
+++ b/nosotros.html
@@ -182,32 +182,51 @@
         </section>
     </main>
 
-    <footer class="footer" id="contacto">
-        <div class="container footer__grid">
-            <div class="footer__col">
-                <h4 class="footer__title">Contacto</h4>
-                <ul class="footer__list">
-                    <li><strong>Email:</strong> <a href="mailto:contacto@talentscode.com">contacto@talentscode.com</a>
-                    </li>
-                    <li><strong>Tel:</strong> <a href="tel:+529990000000">+52 (999) 000 0000</a></li>
-                    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/company/talents-code/"
-                            target="_blank" rel="noopener">@TalentsCode</a></li>
-                </ul>
-            </div>
-            <div class="footer__col">
-                <h4 class="footer__title">Ubicación</h4>
-                <p>Mérida, Yucatán (Atención LATAM)<br> México</p>
-            </div>
-            <div class="footer__col">
-                <h4 class="footer__title">Agenda</h4>
-                <p>¿Listo para una llamada exploratoria?</p>
-                <a href="/index.html#contacto" class="btn btn--primary">Agenda ahora</a>
-            </div>
+   
+  <footer class="site-footer" aria-label="Información legal y redes">
+    <div class="container site-footer__inner">
+
+      <!-- IZQUIERDA: Número de contacto -->
+      <div class="site-footer__left">
+        <div class="footer-contact" aria-label="Teléfonos de contacto">
+          <a href="tel:+529990000000" class="footer-phone" aria-label="Llamar a Talents Code">
+            <span class="footer-phone__label">Tel:</span> +52 (999) 000 0000
+          </a>
+          <br>
         </div>
-        <div class="footer__bottom">
-            <p>&copy; <span id="year"></span> Talents Code</p>
-        </div>
-    </footer>
+      </div>
+
+      <!-- CENTRO: Correo + Derechos -->
+      <div class="site-footer__center">
+        <a href="mailto:contacto@talentscode.com" class="footer-email">contacto@talentscode.com</a>
+        <span class="footer-divider" aria-hidden="true">•</span>
+        <small class="footer-copy">&copy; <span id="year"></span> Talents Code. Todos los derechos reservados.</small>
+      </div>
+
+      <!-- DERECHA: Redes -->
+      <div class="site-footer__right">
+        <ul class="social-links" role="list" aria-label="Redes sociales">
+          <li>
+            <a href="https://www.linkedin.com/company/talents-code/" target="_blank" rel="noopener"
+              aria-label="LinkedIn">
+              <img src="media/images/icons/linkedin.png" alt="" width="28" height="28" class="icon">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/talentscode" target="_blank" rel="noopener" aria-label="Facebook">
+              <img src="media/images/icons/facebook.png" alt="" width="28" height="28" class="icon">
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/talentscode" target="_blank" rel="noopener" aria-label="X / Twitter">
+              <img src="media/images/icons/x.png" alt="" width="28" height="28" class="icon">
+            </a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </footer>
 
     <script src="media/js/script.js" defer></script>
 </body>
