Refactor code structure for improved readability and maintainability

--- a/nosotros.html
+++ b/nosotros.html
@@ -61,7 +61,7 @@
                     <li><a href="/" data-link="home">Inicio</a></li>
                     <li><a href="/nosotros.html" data-link="nosotros">Conócenos</a></li>
                     <li><a href="/servicios.html" data-link="servicios">Servicios</a></li>
-                    <li><a href="#contacto" class="btn btn--sm btn--outline" data-link="contacto">Contacto</a></li>
+                    <li><a href="/index.html#contacto" class="btn btn--sm btn--outline" data-link="contacto">Contacto</a></li>
                 </ul>
             </nav>
         </div>
