Add new logos for Neustart and Itineraria in WEBP format

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </button>
         <ul class="nav__list" id="navMenu">
           <li><a href="/" data-link="home">Inicio</a></li>
-          <li><a href="/nosotros.html" data-link="nosotros">Conócenos</a></li>
-          <li><a href="/servicios.html" data-link="servicios">Servicios</a></li>
-          <li><a href="#contacto" class="btn btn--sm btn--outline" data-link="contacto">Contacto</a></li>
+          <li><a href="https://jgarduno.me/landing-talents-code/nosotros" data-link="nosotros">Conócenos</a></li>
+          <li><a href="https://jgarduno.me/landing-talents-code/servicios" data-link="servicios">Servicios</a></li>
+          <li><a href="https://jgarduno.me/landing-talents-code#contacto" class="btn btn--sm btn--outline" data-link="contacto">Contacto</a></li>
         </ul>
       </nav>
     </div>
@@ -118,90 +118,71 @@
       <div class="container">
         <h2 id="testimonios-title" class="section__title">Testimonios</h2>
 
-        <!-- Viewport -->
         <div class="testimonials__viewport" aria-live="polite">
           <ul class="testimonials__track">
-            <!-- Testimonio 1 (texto literal de tu captura) -->
-            <li class="testimonial is-active">
+            <!-- Slide 1 -->
+            <li class="testimonial" aria-label="Testimonio 1">
               <header class="testimonial__header">
-                <div class="testimonial__brand">
-                  <!-- Logo empresa (opcional) -->
-                  <img src="/img/testimonials/neustrat-logo.png" alt="Neustrat" loading="lazy" width="64" height="64">
-                </div>
-
                 <div class="testimonial__meta">
-                  <img class="testimonial__avatar" src="/img/testimonials/cynthia-gamboa.jpg"
-                    alt="Foto de Cynthia Gamboa" loading="lazy" width="56" height="56">
+                  <img class="testimonial__avatar" src="media/images/clientes/logo-neustart-150x150.webp"
+                    alt="Foto de Cynthia Gamboa" loading="lazy" width="64" height="64">
                   <div class="testimonial__identity">
                     <div class="testimonial__name">Cynthia Gamboa</div>
                     <div class="testimonial__role u-muted">Director de Marketing en Neustrat</div>
                   </div>
                 </div>
               </header>
-
               <blockquote class="testimonial__quote">
-                <p>
-                  Muchas gracias a todo el equipo, ha sido un verdadero gusto poder hacer sinergia y trabajar en
+                <p>Muchas gracias a todo el equipo, ha sido un verdadero gusto poder hacer sinergia y trabajar en
                   conjunto.
                   En un inicio nos ayudaron con un estudio y realizar un perfil de nuestra empresa para posteriormente
                   reclutar a
-                  nuestro personal en base a las necesidades que teníamos en ese momento.
-                </p>
-                <p>
-                  De igual manera nos apoyaron otorgando capacitaciones en diversas áreas y ayudándonos en todo momento
+                  nuestro personal en base a las necesidades que teníamos en ese momento.</p>
+                <p>De igual manera nos apoyaron otorgando capacitaciones en diversas áreas y ayudándonos en todo momento
                   con tips
-                  y seguimiento con el personal contratado.
-                </p>
-                <p>
-                  Totalmente recomendados… ¡Muchas felicidades! y que sigan con ese espíritu de generar ese click entre
-                  empleadores y colaboradores. Gracias.
-                </p>
+                  y seguimiento con el personal contratado.</p>
+                <p>Totalmente recomendados… ¡Muchas felicidades! y que sigan con ese espíritu de generar ese click entre
+                  empleadores y colaboradores. Gracias.</p>
               </blockquote>
             </li>
 
-            <!-- Testimonio 2 (ejemplo editable) -->
-            <li class="testimonial">
+            <!-- Slide 2 -->
+            <li class="testimonial" aria-label="Testimonio 2">
               <header class="testimonial__header">
-                <div class="testimonial__brand">
-                  <img src="/img/testimonials/acme-logo.png" alt="ACME" loading="lazy" width="64" height="64">
-                </div>
                 <div class="testimonial__meta">
-                  <img class="testimonial__avatar" src="/img/testimonials/maria-lopez.jpg" alt="Foto de María López"
-                    loading="lazy" width="56" height="56">
+                  <img class="testimonial__avatar" src="media/images/clientes/logotipo-itineraria-150x150.webp"
+                    alt="Foto de María López" loading="lazy" width="64" height="64">
                   <div class="testimonial__identity">
-                    <div class="testimonial__name">María López</div>
-                    <div class="testimonial__role u-muted">Head of People, ACME</div>
+                    <div class="testimonial__name">Diego Moguel</div>
+                    <div class="testimonial__role u-muted">Director de Itineraria</div>
                   </div>
                 </div>
               </header>
               <blockquote class="testimonial__quote">
-                <p>
-                  Su proceso nos permitió reducir tiempos de contratación y elevar la retención en onboarding.
-                  Comunicación clara y resultados medibles.
+                <p>Nos apoyaron en 2 puntos muy importantes de la empresa, los puntos débiles en el personal que
+                  teníamos y en la contratación de nuevo talento, y fue de las mejores decisiones que hemos tomado.
                 </p>
+                <p>Estamos muy contentos con los resultados obtenidos.</p>
               </blockquote>
             </li>
 
-            <!-- Testimonio 3 (ejemplo editable) -->
-            <li class="testimonial">
+            <!-- Slide 3 -->
+            <li class="testimonial" aria-label="Testimonio 3">
               <header class="testimonial__header">
-                <div class="testimonial__brand">
-                  <img src="/img/testimonials/fabrila-logo.png" alt="Fabrila" loading="lazy" width="64" height="64">
-                </div>
                 <div class="testimonial__meta">
-                  <img class="testimonial__avatar" src="/img/testimonials/jorge-perez.jpg" alt="Foto de Jorge Pérez"
-                    loading="lazy" width="56" height="56">
+                  <img class="testimonial__avatar" src="media/images/clientes/Affenbits-150x150.webp" alt="Foto de Jorge Pérez" loading="lazy" width="64"
+                    height="64">
                   <div class="testimonial__identity">
-                    <div class="testimonial__name">Jorge Pérez</div>
-                    <div class="testimonial__role u-muted">COO, Fabrila</div>
+                    <div class="testimonial__name">Jorge Hernández</div>
+                    <div class="testimonial__role u-muted">Director de Affenbits</div>
                   </div>
                 </div>
               </header>
               <blockquote class="testimonial__quote">
-                <p>
-                  Encontraron talento operativo a volumen sin perder calidad. La operación no se detuvo y mejoraron
-                  nuestros KPIs de tiempo de cobertura.
-                </p>
+                <p>Desde el inicio de la pandemia solicitamos los servicios de Talents Code para la contratación de
+                  programadores y hasta el día de hoy seguimos acudiendo a ellos. Quiero decir que la experiencia es
+                  excepcional. Mucho profesionalismo en el proceso.</p>
+                <p>¡Excelente servicio compañeros!</p>
               </blockquote>
             </li>
           </ul>
@@ -215,7 +196,7 @@
             </svg>
           </div>
 
-          <!-- Barra de progreso del auto-advance -->
+          <!-- Barra de progreso -->
           <div class="testimonials__progress" aria-hidden="true">
             <div class="testimonials__progress-fill"></div>
           </div>
@@ -243,7 +224,6 @@
         </div>
       </div>
     </section>
-
     <!-- CLIENTES -->
     <section class="clients section" id="clientes" aria-labelledby="clientesTitle">
       <div class="container">
@@ -350,7 +330,7 @@
 
       <!-- CENTRO: Correo + Derechos -->
       <div class="site-footer__center">
-        <a href="mailto:hello@talentscode.com" class="footer-email">hello@talentscode.com</a>
+        <a href="mailto:contacto@talentscode.com" class="footer-email">hello@talentscode.com</a>
         <span class="footer-divider" aria-hidden="true">•</span>
         <small class="footer-copy">&copy; <span id="year"></span> Talents Code. Todos los derechos reservados.</small>
       </div>
@@ -437,6 +417,102 @@
     }
   </script>
   <script src="media/js/script.js" defer></script>
+  <script>(function () {
+      const root = document.querySelector('#testimonios');
+      if (!root) return;
+
+      const track = root.querySelector('.testimonials__track');
+      const viewport = root.querySelector('.testimonials__viewport');
+      const prev = root.querySelector('.tnav--prev');
+      const next = root.querySelector('.tnav--next');
+      const currentEl = root.querySelector('.testimonials__pagination .current');
+      const totalEl = root.querySelector('.testimonials__pagination .total');
+      const progress = root.querySelector('.testimonials__progress'); // se ocultará
+
+      // Slides originales
+      const slides = Array.from(track.children);
+      const total = slides.length;
+      if (totalEl) totalEl.textContent = String(total);
+
+      // Clones para loop infinito
+      const firstClone = slides[0].cloneNode(true);
+      const lastClone = slides[slides.length - 1].cloneNode(true);
+      firstClone.setAttribute('aria-hidden', 'true');
+      lastClone.setAttribute('aria-hidden', 'true');
+      track.insertBefore(lastClone, slides[0]);
+      track.appendChild(firstClone);
+
+      // Estado
+      let index = 1; // primer slide real (después del clon inicial)
+      let slideW = 0;
+
+      function setSizes() {
+        slideW = viewport.clientWidth;
+        const panels = Array.from(track.children);
+        panels.forEach(panel => panel.style.flexBasis = slideW + 'px');
+        setTransform(false);
+        setViewportMinHeight();
+      }
+
+      function setTransform(animate = true) {
+        if (!animate) track.style.transition = 'none';
+        track.style.transform = `translate3d(${-index * slideW}px, 0, 0)`;
+        if (!animate) {
+          void track.offsetHeight; // reflow
+          track.style.transition = '';
+        }
+        if (currentEl) currentEl.textContent = String(getRealIndex() + 1);
+      }
+
+      function getRealIndex() {
+        // index global con clones: 0 (lastClone), 1..total (reales), total+1 (firstClone)
+        if (index === 0) return total - 1;
+        if (index === total + 1) return 0;
+        return index - 1;
+      }
+
+      function goTo(targetIndex) {
+        index = targetIndex;
+        setTransform(true);
+      }
+
+      // Saltos silenciosos cuando caemos en clones
+      track.addEventListener('transitionend', () => {
+        if (index === 0) {
+          index = total;      // último real
+          setTransform(false);
+        } else if (index === total + 1) {
+          index = 1;          // primero real
+          setTransform(false);
+        }
+      });
+
+      // Controles por botones únicamente
+      next?.addEventListener('click', () => goTo(index + 1));
+      prev?.addEventListener('click', () => goTo(index - 1));
+
+      // Altura fija al mayor slide para evitar “saltos”
+      function setViewportMinHeight() {
+        const panels = Array.from(track.children);
+        const prevDisplay = panels.map(p => p.style.display);
+        panels.forEach(p => p.style.display = 'block');
+        const max = panels.reduce((m, p) => Math.max(m, p.offsetHeight), 0);
+        panels.forEach((p, i) => p.style.display = prevDisplay[i]);
+        viewport.style.minHeight = max + 'px';
+      }
+
+      // Oculta la barra de progreso (no se usa si no hay autoplay)
+      if (progress) progress.setAttribute('hidden', '');
+
+      // Init
+      setSizes();
+      index = 1;       // posiciona en primer slide real
+      setTransform(false);
+
+      // Responsivo
+      window.addEventListener('resize', setSizes);
+      window.addEventListener('load', setSizes);
+    })();</script>
 </body>
 
 </html>
