--- a/nosotros.html
+++ b/nosotros.html
@@ -59,9 +59,12 @@
                 </button>
                 <ul class="nav__list" id="navMenu">
                     <li><a href="/" data-link="home">Inicio</a></li>
-                    <li><a href="/nosotros.html" data-link="nosotros">Conócenos</a></li>
-                    <li><a href="/servicios.html" data-link="servicios">Servicios</a></li>
-                    <li><a href="/index.html#contacto" class="btn btn--sm btn--outline" data-link="contacto">Contacto</a></li>
+                    <li><a href="https://jgarduno.me/landing-talents-code/nosotros" data-link="nosotros">Conócenos</a>
+                    </li>
+                    <li><a href="https://jgarduno.me/landing-talents-code/servicios" data-link="servicios">Servicios</a>
+                    </li>
+                    <li><a href="https://jgarduno.me/landing-talents-code#contacto" class="btn btn--sm btn--outline"
+                            data-link="contacto">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -182,51 +185,54 @@
         </section>
     </main>
 
-   
-  <footer class="site-footer" aria-label="Información legal y redes">
-    <div class="container site-footer__inner">
 
-      <!-- IZQUIERDA: Número de contacto -->
-      <div class="site-footer__left">
-        <div class="footer-contact" aria-label="Teléfonos de contacto">
-          <a href="tel:+529990000000" class="footer-phone" aria-label="Llamar a Talents Code">
-            <span class="footer-phone__label">Tel:</span> +52 (999) 000 0000
-          </a>
-          <br>
+    <footer class="site-footer" aria-label="Información legal y redes">
+        <div class="container site-footer__inner">
+
+            <!-- IZQUIERDA: Número de contacto -->
+            <div class="site-footer__left">
+                <div class="footer-contact" aria-label="Teléfonos de contacto">
+                    <a href="tel:+529990000000" class="footer-phone" aria-label="Llamar a Talents Code">
+                        <span class="footer-phone__label">Tel:</span> +52 (999) 000 0000
+                    </a>
+                    <br>
+                </div>
+            </div>
+
+            <!-- CENTRO: Correo + Derechos -->
+            <div class="site-footer__center">
+                <a href="mailto:contacto@talentscode.com" class="footer-email">contacto@talentscode.com</a>
+                <span class="footer-divider" aria-hidden="true">•</span>
+                <small class="footer-copy">&copy; <span id="year"></span> Talents Code. Todos los derechos
+                    reservados.</small>
+            </div>
+
+            <!-- DERECHA: Redes -->
+            <div class="site-footer__right">
+                <ul class="social-links" role="list" aria-label="Redes sociales">
+                    <li>
+                        <a href="https://www.linkedin.com/company/talents-code/" target="_blank" rel="noopener"
+                            aria-label="LinkedIn">
+                            <img src="media/images/icons/linkedin.png" alt="" width="28" height="28" class="icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/talentscode" target="_blank" rel="noopener"
+                            aria-label="Facebook">
+                            <img src="media/images/icons/facebook.png" alt="" width="28" height="28" class="icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/talentscode" target="_blank" rel="noopener"
+                            aria-label="X / Twitter">
+                            <img src="media/images/icons/x.png" alt="" width="28" height="28" class="icon">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
-      </div>
-
-      <!-- CENTRO: Correo + Derechos -->
-      <div class="site-footer__center">
-        <a href="mailto:contacto@talentscode.com" class="footer-email">contacto@talentscode.com</a>
-        <span class="footer-divider" aria-hidden="true">•</span>
-        <small class="footer-copy">&copy; <span id="year"></span> Talents Code. Todos los derechos reservados.</small>
-      </div>
-
-      <!-- DERECHA: Redes -->
-      <div class="site-footer__right">
-        <ul class="social-links" role="list" aria-label="Redes sociales">
-          <li>
-            <a href="https://www.linkedin.com/company/talents-code/" target="_blank" rel="noopener"
-              aria-label="LinkedIn">
-              <img src="media/images/icons/linkedin.png" alt="" width="28" height="28" class="icon">
-            </a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/talentscode" target="_blank" rel="noopener" aria-label="Facebook">
-              <img src="media/images/icons/facebook.png" alt="" width="28" height="28" class="icon">
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/talentscode" target="_blank" rel="noopener" aria-label="X / Twitter">
-              <img src="media/images/icons/x.png" alt="" width="28" height="28" class="icon">
-            </a>
-          </li>
-        </ul>
-      </div>
-
-    </div>
-  </footer>
+    </footer>
 
     <script src="media/js/script.js" defer></script>
 </body>
