--- a/servicios.html
+++ b/servicios.html
@@ -130,9 +130,12 @@
                 </button>
                 <ul class="nav__list" id="navMenu">
                     <li><a href="/" data-link="home">Inicio</a></li>
-                    <li><a href="/nosotros.html" data-link="nosotros">Conócenos</a></li>
-                    <li><a href="/servicios.html" data-link="servicios">Servicios</a></li>
-                    <li><a href="/index.html#contacto" class="btn btn--sm btn--outline" data-link="contacto">Contacto</a></li>
+                    <li><a href="https://jgarduno.me/landing-talents-code/nosotros" data-link="nosotros">Conócenos</a>
+                    </li>
+                    <li><a href="https://jgarduno.me/landing-talents-code/servicios" data-link="servicios">Servicios</a>
+                    </li>
+                    <li><a href="https://jgarduno.me/landing-talents-code#contacto" class="btn btn--sm btn--outline"
+                            data-link="contacto">Contacto</a></li>
                 </ul>
             </nav>
         </div>
