Actualizar enlaces de navegación para redirigir a la nueva URL de inicio

--- a/servicios.html
+++ b/servicios.html
@@ -129,7 +129,7 @@
                     <span class="nav__toggle-bar"></span>
                 </button>
                 <ul class="nav__list" id="navMenu">
-                    <li><a href="/" data-link="home">Inicio</a></li>
+                    <li><a href="https://jgarduno.me/landing-talents-code" data-link="home">Inicio</a></li>
                     <li><a href="https://jgarduno.me/landing-talents-code/nosotros" data-link="nosotros">Conócenos</a>
                     </li>
                     <li><a href="https://jgarduno.me/landing-talents-code/servicios" data-link="servicios">Servicios</a>
