Actualizar enlaces de consulta y servicios a nuevas URLs

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             accionable.
           </p>
           <div class="hero__actions">
-            <a href="#contacto" class="btn btn--primary">Agenda una consulta</a>
+            <a href="https://jgarduno.me/landing-talents-code/servicios" class="btn btn--primary">Agenda una consulta</a>
             <a href="/servicios.html" class="btn btn--ghost">Ver servicios</a>
           </div>
         </div>
@@ -113,8 +113,8 @@
           buscamos ser partner de las empresas y tecnologías que nuestros clientes necesitan.
         </p>
         <div class="section__actions">
-          <a href="/nosotros.html" class="btn btn--primary">Conoce nuestra metodología</a>
-          <a href="/servicios.html" class="btn btn--ghost">Soluciones para tu empresa</a>
+          <a href="https://jgarduno.me/landing-talents-code/nosotros" class="btn btn--primary">Conoce nuestra metodología</a>
+          <a href="https://jgarduno.me/landing-talents-code/servicios" class="btn btn--ghost">Soluciones para tu empresa</a>
         </div>
       </div>
     </section>
