Actualizar enlaces de consulta para redirigir a la sección de contacto en la nueva URL

--- a/servicios.html
+++ b/servicios.html
@@ -171,8 +171,7 @@
                         cumplimiento
                     </p>
                     <div class="hero__actions">
-                        <a href="#contacto" class="btn btn--primary">Agenda una consulta</a>
-                        <a href="/servicios.html" class="btn btn--ghost">Ver servicios</a>
+                        <a href="https://jgarduno.me/landing-talents-code#contacto" class="btn btn--primary">Agenda una consulta</a>
                     </div>
                 </div>
             </div>
