--- a/nosotros.html
+++ b/nosotros.html
@@ -507,7 +507,7 @@
                     </h1>
 
                     <div class="hero__actions">
-                        <a href="https://jgarduno.me/landing-talents-code" class="btn btn--primary">Agenda una consulta</a>
+                        <a href="https://jgarduno.me/landing-talents-code#contacto" class="btn btn--primary">Agenda una consulta</a>
                         <a href="https://jgarduno.me/landing-talents-code/servicios" class="btn btn--ghost">Ver servicios</a>
                     </div>
                 </div>
