Actualizar enlaces de consulta a nuevas URLs

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             accionable.
           </p>
           <div class="hero__actions">
-            <a href="https://jgarduno.me/landing-talents-code/servicios" class="btn btn--primary">Agenda una consulta</a>
-            <a href="/servicios.html" class="btn btn--ghost">Ver servicios</a>
+            <a href="https://jgarduno.me/landing-talents-code#contato" class="btn btn--primary">Agenda una consulta</a>
+            <a href="https://jgarduno.me/landing-talents-code/servicios" class="btn btn--ghost">Ver servicios</a>
           </div>
         </div>
       </div>
