--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             accionable.
           </p>
           <div class="hero__actions">
-            <a href="https://jgarduno.me/landing-talents-code#contato" class="btn btn--primary">Agenda una consulta</a>
+            <a href="https://jgarduno.me/landing-talents-code#contacto" class="btn btn--primary">Agenda una consulta</a>
             <a href="https://jgarduno.me/landing-talents-code/servicios" class="btn btn--ghost">Ver servicios</a>
           </div>
         </div>
