Eliminar menciones de reclutamiento masivo y actualizar descripciones de servicios en la sección de nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -526,7 +526,6 @@
                     <ul class="about__bullets">
                         <li>Servicios en contratación.</li>
                         <li>Asesoría y evaluaciones de talento estratégico.</li>
-                        <li>Reclutamiento masivo de personal.</li>
                     </ul>
                 </div>
 
@@ -660,7 +659,7 @@
                         </div>
 
                         <div class="service-card__body">
-                            <h3 class="service-card__title" id="svc-masivo-title">Para reclutamiento masivo de personal
+                            <h3 class="service-card__title" id="svc-masivo-title">Para reclutamiento de personal
                             </h3>
                             <p class="service-card__subtitle">¿Necesitas contratar operativos por expansión o mes con
                                 mes?</p>
@@ -670,7 +669,7 @@
                                     <svg class="icon icon--check" viewBox="0 0 24 24" aria-hidden="true">
                                         <path d="M20 6L9 17l-5-5" />
                                     </svg>
-                                    Reclutamiento masivo y estratégico de personal.
+                                    Reclutamiento estratégico de personal.
                                 </li>
                                 <li>
                                     <svg class="icon icon--check" viewBox="0 0 24 24" aria-hidden="true">
