Actualizar título de servicio de "Reclutamiento masivo de personal" a "Reclutamiento de personal"

--- a/servicios.html
+++ b/servicios.html
@@ -248,7 +248,7 @@
                                 </g>
                             </svg>
                         </div>
-                        <h3 class="feature__title">Reclutamiento masivo de personal</h3>
+                        <h3 class="feature__title">Reclutamiento de personal</h3>
                         <p class="feature__text">
                             ¿Necesitas contratar operativos por expansión o mes con mes? Te hacemos un plan hecho a la
                             medida para que tus posiciones estén en operación ¡Nosotros te ayudamos!
