Actualizar etiquetas de video en las secciones de servicios y nosotros

--- a/servicios.html
+++ b/servicios.html
@@ -147,8 +147,7 @@
             <!-- Capa multimedia -->
             <div class="hero__media" aria-hidden="true">
 
-                <video class="hero__video" autoplay muted loop playsinline preload="auto"
-                    poster="media/images/meeting.png">
+                <video class="hero__video" autoplay muted loop playsinline preload="auto">
                     <source src="media/video/meeting2.mp4" type="video/mp4">
                     <!-- Fallback: si no soporta video verá el poster -->
                 </video>
