--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <!-- Capa multimedia -->
       <div class="hero__media" aria-hidden="true">
 
-        <video class="hero__video" autoplay muted loop playsinline preload="auto" poster="media/images/meeting.png">
+        <video class="hero__video" autoplay muted loop playsinline preload="auto"
           <source src="media/video/meeting1.mp4" type="video/mp4">
           <!-- Fallback: si no soporta video verá el poster -->
         </video>
